--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1412,11 +1412,11 @@
         <h4 class="plugin_summary">OpenStreetMap integration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_osm</dt>
-            <dd class="plugin_version">Version 0.9 (GPL, Last Updated 2021-01-06)</dd>
+            <dd class="plugin_version">Version 0.10 (GPL, Last Updated 2021-01-11)</dd>
             <dd class="plugin_maintainers">Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
-        <p class="plugin_description">Provides an interactive map with *.gpx uploads and tagged geo data.</p>
+        <p class="plugin_description">Provides an interactive map with *.gpx uploads and tagged geo data</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_osm.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_osm">GitHub</a></li>
@@ -1428,11 +1428,11 @@
         <h4 class="plugin_summary">OpenStreetMap static files</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_static_osm</dt>
-            <dd class="plugin_version">Version 0.9 (GPL, Last Updated 2020-09-17)</dd>
+            <dd class="plugin_version">Version 0.10 (GPL, Last Updated 2021-01-11)</dd>
             <dd class="plugin_maintainers">Martin Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
-        <p class="plugin_description">Includes scripts and stylesheets for OpenStreetMap support.</p>
+        <p class="plugin_description">Includes scripts and stylesheets for OpenStreetMap support</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_static_osm.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_static_osm">GitHub</a></li>
