--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -224,7 +224,7 @@ if (IN_serendipity !== true) {
 @serendipity_plugin_api::load_language(dirname(__FILE__));
 
 // Extend the base class
-class serendipity_event_myfirstplugin extends serendipity_plugin {
+class serendipity_event_myfirstplugin extends serendipity_event {
     var $title = MYFIRSTPLUGIN_TITLE;
 
     // Setup metadata
