hc::code-primer: Fix typo

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -422,7 +422,7 @@ print_r($entries);
   <li><code>$serendipity['uploadPath']</code>: Path to “uploads” directory</li>
   <li><code>$serendipity['templatePath']</code>: Path to “templates” directory”</li>
   <li><code>$serendipity['uploadHTTPPath']</code>: URL-path to “uploads” directory</li>
-  <li><code>$serendipity['autodetect_baseURL']</code>: Boolean whether to enable autodetection of HTPP host name</li>
+  <li><code>$serendipity['autodetect_baseURL']</code>: Boolean whether to enable autodetection of HTTP host name</li>
   <li><code>$serendipity['defaultBaseURL']</code>: When HTTP-Hostname autodetection is turned off, contains the default URL to Serendipity</li>
   <li><code>$serendipity['indexFile']</code>: Name to index.php (used for <a href="embedding.html">Embedded Installation</a>)</li>
   <li><code>$serendipity['permalinkStructure']</code>: Permalink for archives/ patterns</li>
