themes: Update page list for bulletproof and e88631649c0da5d74ec8d7b46e05ec5a14a5ff3d

--- a/themes/inc/themes_list.htm
+++ b/themes/inc/themes_list.htm
@@ -20,6 +20,7 @@
 <li><a href="#blue-iceberg">Blue Iceberg</a></li>
 <li><a href="#contest">Blue Streak (contest)</a></li>
 <li><a href="#brownpaper">Brown Paper</a></li>
+<li><a href="#bulletproof">Bulletproof</a></li>
 <li><a href="#carl_blue">Carl Blue</a></li>
 <li><a href="#carl_green">Carl Green</a></li>
 <li><a href="#ceejay01">Ceejay01</a></li>
