hc::plugin-api: Revert f428ded4f4624dc455cccb6b9cee8c520788dbc9

--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -1082,6 +1082,7 @@ class serendipity_event_backpage extends serendipity_event
   <li>fetchcomments</li>
   <li>frontend_calendar</li>
   <li>frontend_display:html_layout</li>
+  <li>frontend_display:rss-1.0:once</li>
   <li>frontend_display:html:per_entry</li>
   <li>frontend_display_cache</li>
   <li>frontend_entries_rss</li>
