--- a/themes/inc/themes_content.htm
+++ b/themes/inc/themes_content.htm
@@ -382,7 +382,7 @@
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/bulletproof/preview.webp">
-            <img src="/i/t/bulletproof/preview.png" title="Advanced option theme in optional 3, 2, or 1 -column layouts with various sidebar combinations. This theme as v1.4 for long years was the Serendipity Standard theme since Serendipity v.1.2.
+            <img src="/i/t/bulletproof/preview.png" title="Advanced option theme in optional 3, 2, or 1 -column layouts with various sidebar combinations. This theme (as v1.4) for long years was the Serendipity Standard theme since Serendipity v.1.2.
 It allows to set 4 different colorsets and uses various user options to differently disable or set/move certain parts of the frontend, like footers or forms, without touching code by hand.&lt;br&gt;
 Among these it was used as the default backend theme for a long time. This latter was no longer usable since Serendipity 2.0 and therefore has been removed completely.&lt;br&gt;
 * 2017-04-19 - Removed dead cocomment option and scripting&lt;br&gt;
@@ -391,7 +391,7 @@ Among these it was used as the default backend theme for a long time. This latte
 * 2020-02-23 - Some Upgrades for image responsive fluids, to work with Styx 3.0; Without actually making it auto scale and mobile ready." alt="Bulletproof">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2021-02-20</dd>
+    <dd class="theme_version">Version 1.5 (N/A GPL), 2021-02-20</dd>
     <dd class="theme_maintainers" title="Bulletproof development team, Ian Styx">Bulletproof development team, Ian Styx</dd>
     <dd class="theme_requirements">Serendipity &gt;= 1.7</dd>
 </dl>
