hc::themes: Precise download

--- a/hc/en/themes.html
+++ b/hc/en/themes.html
@@ -99,7 +99,7 @@
                     </ul>
                     <h2 id="docs-manage-themes">Manage Themes</h2>
 
-                    <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your administration screen, or you could download a zipfile of the theme from the Serendipity repository, or even from the designer’s own blog.</p>
+                    <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your backends administration screen, or you could download a tarfile of the theme from the Serendipity Styx repository, or even from the designer’s own blog.</p>
 
                     <p>Many users of Serendipity eventually want to modify a theme to suit their needs. All Serendipity themes are written using standard HTML and CSS, but with the addition of the easy to learn and very powerful Smarty templating language.</p>
 
@@ -107,7 +107,7 @@
 
                     <p>By default Serendipity ships with several attractive themes for you to try. Simply login to your administration suite and click the “Manage Themes” link in the left sidebar. This produces a list of all available themes with screenshots to make it easy for you. At the bottom of each theme is the theme install button. The current selected theme moves to the top of the list “left” next to the current used backend theme.</p>
 
-                    <p>If your Serendipity blog isn’t able to use Spartacus, perhaps because your webhost won’t allow it, you can still install new themes for your blog. Either visit the web-based version of the <a href="/themes/">Serendipity repository</a> or download a zipfile of the theme directly from the template designer. You’ll need to unzip the theme and upload it (using ftp) to the templates folder of your Serendipity installation. Once you have uploaded your new theme, select the theme from ‘Manage Themes’ page within the administration suite.</p>
+                    <p>If your Serendipity blog isn’t able to use Spartacus, perhaps because your webhost won’t allow it, you can still install new themes for your blog. Either visit the web-based version of the <a href="/themes/">Serendipity Styx repository</a> or download a zipfile of the theme directly from the template designer. You’ll need to unzip the theme and upload it (using FTP) to the templates folder of your Serendipity installation. Once you have uploaded your new theme, select the theme from ‘Manage Themes’ page within the administration suite.</p>
 
                     <p>If you have any questions about Serendipity themes, please be sure to visit the S9y-Origin <a href="https://board.s9y.org">forums</a> and ask your question in the themes forum.</p>
 
