hc::faq: Precise themes download

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -710,7 +710,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 
     <li id="docs-how-to modify-and-manage-themes">How to modify and manage themes</li>
 
-    <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your administration screen, or you could download a tarfile of the theme from the Serendipity Styx repository, or even from the designer’s own blog.</p>
+    <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your backends administration screen, or you could download a tarfile of the theme from the Serendipity Styx repository, or even from the designer’s own blog.</p>
 
     <p>Many users of Serendipity eventually want to modify a theme to suit their needs. All Serendipity themes are written using standard HTML and CSS, but with the addition of the easy to learn and very powerful Smarty templating language.</p>
 
