hc::themes: Precise modifications

--- a/hc/en/themes.html
+++ b/hc/en/themes.html
@@ -115,7 +115,7 @@
 
                     <p>You can add <strong>any</strong> HTML or Javascript to your Serendipity blog! And there’s more than one way to do it.</p>
 
-                    <h4 id="docs-the-easiest-way-is-to-install-the-html-nugget-plugin">The easiest way is to install the “HTML Nugget” plugin.</h4>
+                    <h4 id="docs-the-easiest-way-is-to-install-the-html-nugget-plugin">The easiest way is to install the “HTML Nugget” sidebar plugin.</h4>
 
                     <p>This plugin provides a block in the sidebar where you can insert your custom code.</p>
 
@@ -123,7 +123,7 @@
 
                     <p>This does exactly the same thing, but inserts your code in the head of every Serendipity page. You can verify that it works with your browser’s “View Source” capability.</p>
 
-                    <h4 id="docs-if-you-want-to-make-the-changes-directly-you-should-modify-your-template">If you want to make the changes directly, you should modify your template.</h4>
+                    <h4 id="docs-if-you-want-to-make-the-changes-directly-you-should-modify-your-template">If you want to make the changes directly, you should modify your template file(s).</h4>
 
                     <p>To put Javascript in the head of the page, for instance, you’d want to modify the index.tpl in templates/{your currently selected template’s name}. If it doesn’t exist, please copy it from templates/default/index.tpl.</p>
 
