--- a/about/index.html
+++ b/about/index.html
@@ -160,7 +160,7 @@
 
             <p>Regards Ian,<br>Enjoy Styx <strong>!</strong></p>
 
-            <p>This site was created using <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a>>.</p>
+            <p>This site was created using <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a>.</p>
         </div>
         <div class="blog-post__footer">
             <div class="blog-post__footer-author">
