--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1660,11 +1660,11 @@
         <h4 class="plugin_summary">Contact Form</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contactform</dt>
-            <dd class="plugin_version">Version 1.38 (GPL, Last Updated 2021-03-30)</dd>
+            <dd class="plugin_version">Version 1.39 (GPL, Last Updated 2021-04-03)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
-        <p class="plugin_description">Shows a email contactform on your blog as a static page. It can be accessed by either the custom permalink or by index.php?serendipity[subpage]=contactform. You can customize the look of the contact form by putting the plugin_contactform.tpl file into your template directory and modify it there. Captchas from the Spamblock plugin (if enabled) will be applied.</p>
+        <p class="plugin_description">Shows an email contactform on your blog as a static page. It can be accessed by either the custom permalink or by index.php?serendipity[subpage]=contactform. You can customize the look of the contact form by putting the plugin_contactform.tpl file into your template directory and modify it there. Captchas from Spamblock plugins (if enabled) will be applied.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_contactform.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_contactform">GitHub</a></li>
