--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -384,15 +384,15 @@
         <h4 class="plugin_summary">SideBar Logo</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_sidebarlogo</dt>
-            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2016-10-24)</dd>
+            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2021-04-07)</dd>
             <dd class="plugin_maintainers">Adam Krause &amp; Oliver Gerlach</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
         <p class="plugin_description">Displays a panel containing your logo with a description including all relevant information about your site (an about box).</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_sidebarlogo.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_sidebarlogo">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_sidebarlogo" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_sidebarlogo" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_sidebarlogo/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
