--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -615,7 +615,7 @@
         <h4 class="plugin_summary">Static Page List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_staticpage</dt>
-            <dd class="plugin_version">Version 1.32 (GPL, Last Updated 2021-03-13)</dd>
+            <dd class="plugin_version">Version 1.33 (GPL, Last Updated 2021-04-24)</dd>
             <dd class="plugin_maintainers">Rob Antonishen, Falk Doering, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -699,11 +699,11 @@
         <h4 class="plugin_summary">Unified Sidebar Image Display</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_imagesidebar</dt>
-            <dd class="plugin_version">Version 2.7 (BSD, Last Updated 2021-01-05)</dd>
+            <dd class="plugin_version">Version 2.8 (BSD, Last Updated 2021-04-24)</dd>
             <dd class="plugin_maintainers">Andrew Brown (Menalto code), Matthew Groeninger (Unified/Media Lib. Code), Stefan Lange-Hegermann (Zooomr Code), Matthew Maude (Coppermine code), Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
-        <p class="plugin_description">Offers the ability to display images in the sidebar. The source of the images is configurable. The plugin is able to a Coppermine database directory (MySql only), or access images in the Serendipity Media Library. PLEASE NOTE: This plugin has been checked working with recent Serendipity installs for the Serendipity Media Library only.</p>
+        <p class="plugin_description">Offers the ability to display images in the sidebar. The source of the images is configurable. The plugin is able to access a Coppermine database directory (MySQL only), or access images in the Serendipity Media Library. PLEASE NOTE: This plugin has been checked working with recent Serendipity installs for the Serendipity Media Library only.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_imagesidebar.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_imagesidebar">GitHub</a></li>
