site: Point to discussions

--- a/index.html
+++ b/index.html
@@ -183,9 +183,11 @@
 
             <h3 id="help-requests">Help requests:</h3>
 
-            <p>Since being highly overloaded to set up a Styx forum here, to get direct help from myself and/or other users,
-            please just use the GitHub Styx <a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> issue</a> tasks, if you have questions
-            or found a bug, or find your way to the origin Serendipity forum board. Thanks.</p>
+            <p>To get direct help from myself and/or other users, please just use the the new
+            <a class="icon icon--small" href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> discussions</a>
+            page on GitHub Styx or use the Styx
+            <a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> issue</a> tasks,
+            if you have questions or found a bug. Thanks.</p>
 
             <hr>
 
