--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -204,7 +204,7 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.16.0.3 (GPL, Last Updated 2021-05-06)</dd>
+            <dd class="plugin_version">Version 4.16.1.0 (GPL, Last Updated 2021-06-07)</dd>
             <dd class="plugin_maintainers">Rustam Abdullaev, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.6.2</dd>
         </dl>
@@ -896,7 +896,7 @@
         <h4 class="plugin_summary">Template Editor</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_template_editor</dt>
-            <dd class="plugin_version">Version 0.9 (GPL, Last Updated 2017-02-02)</dd>
+            <dd class="plugin_version">Version 0.10 (GPL, Last Updated 2021-06-07)</dd>
             <dd class="plugin_maintainers">Malte Paskuda</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1724,7 +1724,7 @@
         <h4 class="plugin_summary">Frequently Asked Questions</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_faq</dt>
-            <dd class="plugin_version">Version 1.43 (GPL, Last Updated 2021-02-01)</dd>
+            <dd class="plugin_version">Version 1.44 (GPL, Last Updated 2021-06-07)</dd>
             <dd class="plugin_maintainers">Falk Doering, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2052,8 +2052,8 @@
         <h4 class="plugin_summary">Enhanced Comment Area</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_livecomment</dt>
-            <dd class="plugin_version">Version 2.5.7 (GPL, Last Updated 2020-12-21)</dd>
-            <dd class="plugin_maintainers">Malte Paskuda, Garvin Hicking</dd>
+            <dd class="plugin_version">Version 2.5.8 (GPL, Last Updated 2021-06-07)</dd>
+            <dd class="plugin_maintainers">Malte Paskuda, Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Uses JavaScript to show a live preview and markup-buttons</p>
@@ -2248,7 +2248,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 2.02 (GPL, Last Updated 2020-12-16)</dd>
+            <dd class="plugin_version">Version 2.02 (GPL, Last Updated 2021-06-07)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0.0</dd>
         </dl>
@@ -2412,7 +2412,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 2.02 (GPL, Last Updated 2020-12-16)</dd>
+            <dd class="plugin_version">Version 2.02 (GPL, Last Updated 2021-06-07)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0.0</dd>
         </dl>
