--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1116,7 +1116,7 @@
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_userprofiles</dt>
-            <dd class="plugin_version">Version 0.39 (GPL, Last Updated 2021-08-04)</dd>
+            <dd class="plugin_version">Version 0.40 (GPL, Last Updated 2021-08-04)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Falk Doering, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -1216,7 +1216,7 @@
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_userprofiles</dt>
-            <dd class="plugin_version">Version 0.39 (GPL, Last Updated 2021-08-04)</dd>
+            <dd class="plugin_version">Version 0.40 (GPL, Last Updated 2021-08-04)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Falk Doering, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -2816,7 +2816,7 @@
         <h4 class="plugin_summary">Karma</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_karma</dt>
-            <dd class="plugin_version">Version 2.19 (GPL, Last Updated 2021-03-27)</dd>
+            <dd class="plugin_version">Version 2.20 (GPL, Last Updated 2021-08-04)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Judebert, Gregor Voeltz, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -2849,7 +2849,7 @@
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_pollbox</dt>
             <dd class="plugin_version">Version 2.23 (GPL, Last Updated 2021-08-04)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Matthias Mees</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Maintains your votings / polls</p>
