--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -220,7 +220,7 @@
         <h4 class="plugin_summary">Community Rating</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_communityrating</dt>
-            <dd class="plugin_version">Version 1.14 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2021-08-06)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Lewe Zipfel, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -316,8 +316,8 @@
         <h4 class="plugin_summary">Geotag</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_geotag</dt>
-            <dd class="plugin_version">Version 1.42 (GPL, Last Updated 2021-05-28)</dd>
-            <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies</dd>
+            <dd class="plugin_version">Version 1.43 (GPL, Last Updated 2021-08-06)</dd>
+            <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Allows entries to be geotagged with coordinates</p>
