--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -140,8 +140,8 @@
         <h4 class="plugin_summary">Geotag Google/OSM Map</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_geotag</dt>
-            <dd class="plugin_version">Version 1.42 (GPL, Last Updated 2017-02-02)</dd>
-            <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies</dd>
+            <dd class="plugin_version">Version 1.43 (GPL, Last Updated 2017-02-02)</dd>
+            <dd class="plugin_maintainers">Zoran Kovacevic, Grischa Brockhaus, Matthias Gutjahr, Martin Sewelies, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">This plugin displays a Google Map or Openstreetmap with geotagged entries</p>
