--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -452,11 +452,11 @@
         <h4 class="plugin_summary">Birthdays of users</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_userprofiles_birthdays</dt>
-            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2017-11-04)</dd>
+            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2021-08-25)</dd>
             <dd class="plugin_maintainers">Falk Doering</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description"></p>
+        <p class="plugin_description">none</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_userprofiles_birthdays.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_userprofiles_birthdays">GitHub</a></li>
@@ -564,7 +564,7 @@
         <h4 class="plugin_summary">Serendipity Authors</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_userprofiles</dt>
-            <dd class="plugin_version">Version 1.2.3 (GPL, Last Updated 2021-03-07)</dd>
+            <dd class="plugin_version">Version 1.3.0 (GPL, Last Updated 2021-08-25)</dd>
             <dd class="plugin_maintainers">Falk Doering</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -799,7 +799,7 @@
         <h4 class="plugin_summary">Spam Report</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_spamblock_bee</dt>
-            <dd class="plugin_version">Version 1.4.4 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.4.5 (GPL, Last Updated 2016-07-07)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Janek Bevendorff</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
