hc::code-primer: Fix wording for MediaLibrary usage

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -282,7 +282,7 @@ print_r($entries);
   <li><strong>checksums.inc.php</strong>: A checksum file that holds information about the files that belong to the current Serendipity version; It is used to verify the integrity of an installation to find modified files.</li>
   <li><strong>exit.php</strong>: A tracking script used for external links</li>
   <li><strong>rss.php</strong>: The RSS feeds are routed through this</li>
-  <li><strong>serendipity_admin_image_selector.php</strong>: A media database popup screen that is called from within the Backend</li>
+  <li><strong>serendipity_admin_image_selector.php</strong>: A MediaLibrary popup screen that is called from within the Backend</li>
   <li><strong>serendipity_xmlrpc.php</strong>: A basic stub for XML-RPC calls made to the Blog, the actual XML-RPC client is provided through a plugin</li>
 </ul>
 
@@ -485,7 +485,7 @@ print_r($entries);
   <li><code>$serendipity['maxImgWidth']</code>: Maximum width for uploaded images</li>
   <li><code>$serendipity['maxImgHeight']</code>: Maximum height for uploaded images</li>
   <li><code>$serendipity['uploadResize']</code>: Boolean whether to resize images to maximum size before uploading</li>
-  <li><code>$serendipity['onTheFlySynch']</code>: Boolean whether every call to the media database checks for updated files</li>
+  <li><code>$serendipity['onTheFlySynch']</code>: Boolean whether every call to the MediaLibrary checks for updated files</li>
   <li><code>$serendipity['dynamicResize']</code>: Whether to allow Frontend visitors to resize thumbnails on demand</li>
   <li><code>$serendipity['mediaExif']</code>: Whether to parse EXIF information of uploaded files</li>
   <li><code>$serendipity['mediaProperties']</code>: Which meta information shall be available in the media database</li>
