site: Add Styx github discussions link

--- a/book/index.html
+++ b/book/index.html
@@ -258,6 +258,7 @@ if (document.readyState == "DOMContentLoaded") {
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Discussions</a></li>
                     </ul>
                 </div>
             </div>
@@ -295,6 +296,7 @@ if (document.readyState == "DOMContentLoaded") {
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Discussions</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
