--- a/hc/en/statistics.html
+++ b/hc/en/statistics.html
@@ -61,6 +61,7 @@
             <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/styx/releases" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Releases"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Downloads</a></li>
             <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Plugins"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Plugins</a></li>
             <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Issues"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Issues</a></li>
+            <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Discussions</a></li>
         </ul>
         <p class="site-nav__menu-category">Book</p>
         <ul class="site-nav__menu" aria-label="link book page">
@@ -142,6 +143,7 @@
                         <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                         <li class="icon-site"><a href="/hc/en/faq/">Serendipity Styx FAQ</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Discussions</a></li>
                     </ul>
                 </div>
             </div>
@@ -167,6 +169,7 @@
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/discussions" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Discussions</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
