--- a/hc/en/statistics.html
+++ b/hc/en/statistics.html
@@ -87,7 +87,7 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center [en] documents navigation">
                     <ul>
-                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/"><img class="icon-info-square" src="/i/info-square.svg" width="32" height="32"> Styx Help Center</a></li>
                         <li><a href="/hc/en/">Documentation [en]</a></li>
                         <li><a href="/hc/de/">Dokumentation [de]</a></li>
                         <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
