--- a/hc/index.html
+++ b/hc/index.html
@@ -87,7 +87,7 @@
             <div class="col-menu__wrapper">
                 <nav class="col-menu" role="navigation" aria-label="Help Center documents navigation">
                     <ul>
-                        <li><a href="/hc/"><img src="/i/info_icon-64.png" width="32" height="32"> Styx Help Center</a></li>
+                        <li><a href="/hc/"><img class="icon-info-square" src="/i/info-square.svg" width="32" height="32"> Styx Help Center</a></li>
                         <li><a href="/hc/en/">Documentation [en]</a></li>
                         <li><a href="/hc/de/">Dokumentation [de]</a></li>
                         <li><a href="/hc/en/faq/">Styx Help Center FAQ</a></li>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-document__wrapper">
                 <div class="col-document">
-                  <h1><img src="/i/info_icon-64.png" width="42" height="42"> Help Center Main</h1>
+                  <h1><img class="icon-info-square" src="/i/info-square.svg" width="42" height="42"> Help Center Main</h1>
                   <p>There is no actual help center: “Main-page” yet. Please follow the left-sided links if on desktop screens ≥ 1280px, or see below.</p>
                   <p>This mainly are the <a href="/hc/en">documentation</a> and the <a href="/hc/en/faq/">FAQ</a> <strong>[en]</strong> pages.</p>
                   <p>Or use the sidebars <span class="icon icon--small"><svg class="icon__body"><use xlink:href="#menu"></use></svg> or footer links to navigate through this Styx Site.</span></p>
