--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -476,7 +476,7 @@
         <h4 class="plugin_summary">Tagging of entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_freetag</dt>
-            <dd class="plugin_version">Version 5.14 (GPL, Last Updated 2021-12-30)</dd>
+            <dd class="plugin_version">Version 5.15 (GPL, Last Updated 2022-01-21)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Malte Paskuda, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1284,9 +1284,9 @@
         <h4 class="plugin_summary">HTML Link Metatags</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linktoolbar</dt>
-            <dd class="plugin_version">Version 1.5.1 (GPL, Last Updated 2016-07-07)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
+            <dd class="plugin_version">Version 1.6.0 (GPL, Last Updated 2022-01-22)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.7</dd>
         </dl>
         <p class="plugin_description">Inserts link rel=&quot;start|up|prev|next|canonical&quot; metatags into your frontend for better navigation.</p>
         <ul class="plugin_actions">
@@ -2084,9 +2084,9 @@
         <h4 class="plugin_summary">Frontend entry filtering</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_filter_entries</dt>
-            <dd class="plugin_version">Version 1.11 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 2.0.0 (GPL, Last Updated 2022-01-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
         <p class="plugin_description">Allows visitors to filter/order your entries by several options</p>
         <ul class="plugin_actions">
