--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1284,11 +1284,11 @@
         <h4 class="plugin_summary">HTML Link Metatags</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linktoolbar</dt>
-            <dd class="plugin_version">Version 1.6.1 (GPL, Last Updated 2022-01-23)</dd>
+            <dd class="plugin_version">Version 1.6.2 (GPL, Last Updated 2022-01-24)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.7</dd>
         </dl>
-        <p class="plugin_description">Inserts link rel=&quot;start|up|prev|next|canonical&quot; metatags into your frontend for better navigation.</p>
+        <p class="plugin_description">Inserts link rel=&quot;start|up|prev|next|canonical&quot; metatags into your frontend for better navigation. Check your themes index.tpl file to avoid double sets.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_linktoolbar.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_linktoolbar">GitHub</a></li>
