--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -384,8 +384,8 @@
         <h4 class="plugin_summary">SideBar Logo</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_sidebarlogo</dt>
-            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2021-10-28)</dd>
-            <dd class="plugin_maintainers">Adam Krause &amp; Oliver Gerlach</dd>
+            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2022-01-24)</dd>
+            <dd class="plugin_maintainers">Adam Krause &amp; Oliver Gerlach, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
         <p class="plugin_description">Displays a panel containing your logo with a description including all relevant information about your site (an about box).</p>
