hc::code-primer: Add $serendipity['CBAfetchLimit'] recommendation

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -183,7 +183,7 @@ print_r($entries);
   <li><code>$serendipity['trackback_filelimit']</code>: How large may an URL be to check for incoming trackback links (default 150kb)</li>
   <li><code>$serendipity['fetchLimit']</code>: How many entries to display (default 15)</li>
   <li><code>$serendipity['RSSfetchLimit']</code>: How many entries to display within RSS feed (default 15)</li>
-  <li><code>$serendipity['CBAfetchLimit']</code>: [Styx 2.6.dev+] How many comments to display within comments_by_author shortcut pages (default 10)</li>
+  <li><code>$serendipity['CBAfetchLimit']</code>: [Styx 2.6.dev+] How many comments to display within comments_by_author shortcut pages (default 10). Recommended set: 20</li>
   <li><code>$serendipity['use_PEAR']</code>: By default, Serendipity will use externally provided PEAR files (if existing). To force using the PEAR libraries bundled with Serendipity, set this variable to FALSE.</li>
   <li><code>$serendipity['useHTTP-Auth']</code>: If enabled (on by default, requires mod_php), users can log in to the Blog by specifying user/password in the URL like <strong>http://user:password@example.com/serendipity_admin.php</strong> (default true)</li>
   <li><code>$serendipity['cacheControl']</code>: (default true)</li>
